--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,107 @@
   box-sizing: border-box;
   text-decoration: none ;
 }
+:root{
+  --primary-color: #3538FF;
+  --primary-black-color: #000123;
+  --background-white: #FFFFFF;
+  --background-white-gray: #FCFBFB;
+  --box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px; 
+  --box-shadow-hover: rgba(149, 157, 165, 0.6) 0px 8px 24px; 
+}
+.primary {
+  color: var(--primary-color);
+}
+.primary-black {
+  color : var(--primary-black-color);
+}
+body {
+  background: var(--background-white);
+}
+
+.note {
+  background: var(--background-white-gray);
+  padding: 25px;
+  box-shadow: var(--box-shadow);  
+  transition: box-shadow 1s ease;
+}
+.note:hover {
+   box-shadow: var(--box-shadow-hover)
+}
+
+@media (max-width: 768px) {
+ .note {
+  font-size: 11px;
+ }
+ h3 {
+  font-size: 18px;
+ }
+ .custom-margin-sm {
+  margin: 0 auto; 
+  max-width: 90%; 
+}
+}
+form {
+  position: fixed; 
+  top: 630px; 
+  left: 50%;
+  transform: translateX(-50%); 
+  z-index: 1000; 
+  background: #fff;
+  padding: 15px;
+  border-radius: 20px;
+  box-shadow: var(--box-shadow);
+  width: 780px; 
+}
+form:hover,form:focus {
+  box-shadow: var(--box-shadow-hover);
+}
+
+form input,
+form textarea {
+  width: 100%;
+  height: 40px;
+  border: none;
+  padding: 4px;
+  outline: none;
+  font-size: 1.2em;
+  font-family: inherit;
+  resize: none;
+  overflow: hidden;
+}
+form button {
+  position: absolute;
+  right: 18px;
+  bottom: -18px;
+  background: var(--primary-color);
+  color: var(--background-white);
+  border: none;
+  border-radius: 50%;
+  width: 36px;
+  height: 36px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  outline: none;
+}
+
+@media (max-width: 768px) {
+  form {
+    top: 580px;
+    height: 90px;
+  }
+}
+footer {
+  width: 100%;
+  z-index: -20;
+  padding: 10px;
+  text-align: center;
+  position: fixed;
+  bottom: -20px;  
+}
+
+@media (max-width: 768px) {
+  footer {
+    position: none;
+    bottom: 0;
+  }
+}
